@@ -3,6 +3,7 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 2.2.0.pre11
 ==============================
+ -- Permit a regular user to change the partition of a pending job.
 
 * Changes in SLURM 2.2.0.pre10
 ==============================
